# btnsidemenu

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
btn_side_menu_custom_app/: api.py  hooks.py  modules.txt
btn_side_menu_custom_app/btn_side_menu_custom_app/: api.py
btn_side_menu_custom_app/btn_side_menu_custom_app/doctype/menu_group/: menu_group.js  menu_group.json  menu_group.py  test_menu_group.py
btn_side_menu_custom_app/btn_side_menu_custom_app/doctype/side_menu/: side_menu.js  side_menu.json  side_menu.py  test_side_menu.py
btn_side_menu_custom_app/btn_side_menu_custom_app/doctype/side_menu_settings/: side_menu_settings.js  side_menu_settings.json  side_menu_settings.py  test_side_menu_settings.py
btn_side_menu_custom_app/btn_side_menu_custom_app/doctype/sub_menu/: sub_menu.json  sub_menu.py
btn_side_menu_custom_app/btn_side_menu_custom_app/doctype/sub_menu_group/: sub_menu_group.js  sub_menu_group.json  sub_menu_group.py  test_sub_menu_group.py
btn_side_menu_custom_app/config/: desktop.py  docs.py
btn_side_menu_custom_app/public/css/: ._ui-icons-regular.css  frappe_side_menu.css  ui-icons-regular.css
btn_side_menu_custom_app/public/js/: ._jquery.slimscroll.js  custom_workspace.js  frappe_side_menu.js
btn_side_menu_custom_app/templates/: drill_down_menu.html  drill_down_tab.html  side_menu1.html
btn_side_menu_custom_app/templates/pages/: erplogin.html  erplogin.py
